--- a/notes-app/package.json
+++ b/notes-app/package.json
@@ -1,11 +1,15 @@
 {
   "name": "notes-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple note taking app.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Aniruddha (@ruddha2001)",
+  "license": "ISC",
+  "dependencies": {
+    "validator": "^12.1.0"
+  }
 }
