Added basic yargs commands

--- a/notes-app/package.json
+++ b/notes-app/package.json
@@ -10,6 +10,8 @@
   "author": "Aniruddha (@ruddha2001)",
   "license": "ISC",
   "dependencies": {
-    "validator": "^12.1.0"
+    "chalk": "^3.0.0",
+    "validator": "^12.1.0",
+    "yargs": "^15.0.2"
   }
 }
